--- a/.gitignore
+++ b/.gitignore
@@ -31,3 +31,10 @@ hs_err_pid*
 /src/main/resources/application-prod.yml
 /src/main/resources/application-test.yml
 /src/main/java/com/jiudian/config/WebConfig.java
+.idea/compiler.xml
+.idea/encodings.xml
+.idea/inspectionProfiles/Project_Default.xml
+.idea/misc.xml
+.idea/modules.xml
+.idea/vcs.xml
+.idea/workspace.xml
